--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -14,6 +14,8 @@ COPY requirements.txt .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-COPY src/ .
+COPY . .
 
-CMD ["uvicorn", "src.main:app", "--reload", "--host", "0.0.0.0", "--port", "5000"]
+# EXPOSE 80/tcp
+# ENTRYPOINT [ "alembic", "upgrade", "head"]
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
