--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,32 @@ services:
       - 5000:5000
     volumes:
       - ./backend:/app
-    command: uvicorn src.main:app --reload --host 0.0.0.0 --port 5000
+    # command: uvicorn src.main:app --reload --host 0.0.0.0 --port 5000
+    environment:
+      - APP_SECRET_STRING=admin
+      - DATABASE_USERNAME=root
+      - DATABASE_PASSWORD=admin
+      - DATABASE=db
+      - DATABASE_TEST=test
+      - DATABASE_HOST=mysql
+      - DATABASE_SOCKET=3306
+    depends_on:
+      - mysql
+    networks:
+      - fastapinetwork
+  mysql:
+    image: mysql:latest
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    container_name: mysql
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=admin
+      # - MYSQL_DATABASE=db
+    volumes:
+      - ./entrypoints/mysql:/docker-entrypoint-initdb.d
+    networks:
+      - fastapinetwork
 
   # frontend:
   #   build: ./frontend
@@ -20,4 +45,7 @@ services:
   #   environment:
   #     - CHOKIDAR_USEPOLLING=true
   #   command: "npm run serve -- --public 0.0.0.0:8080"
-    
+  
+networks:
+    fastapinetwork:
+        driver: bridge
