--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ email-validator==1.3.1
 fastapi==0.92.0
 fastapi-jwt-auth==0.5.0
 greenlet==2.0.2
+gunicorn==20.1.0
 h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
@@ -50,5 +51,5 @@ starlette==0.25.0
 typing_extensions==4.5.0
 urllib3==1.26.14
 uvicorn==0.20.0
+websockets==10.4
 win32-setctime==1.1.0
-gunicorn==20.1.0
