--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,13 +2,12 @@ FROM node:lts-alpine
 
 WORKDIR /app
 
-ENV HOST=0.0.0.0
 ENV PATH /app/node_modules/.bin:$PATH
-
-RUN npm install @vue/cli@5.0.8 -g
 
 COPY package.json .
 COPY package-lock.json .
-RUN npm install
 
-# CMD ["npm", "run", "dev"]
+RUN npm install
+RUN npm install @vue/cli@5.0.8 -g
+
+CMD ["npm", "run", "serve"]
