finish auth module, update docs

--- a/k8s/fastapi-deployment.yaml
+++ b/k8s/fastapi-deployment.yaml
@@ -54,7 +54,14 @@ spec:
         #     secretKeyRef:
         #       name: banderachat-secrets
         #       key: DATABASE_SOCKET
-
+        resources:
+            limits:
+              cpu: 256m
+              memory: 256Mi
+            requests:
+              cpu: 100m
+              memory: 128Mi
+---
 ---
 
 apiVersion: v1
