--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,15 +35,15 @@ services:
     networks:
       - fastapinetwork
 
-  frontend:
-    build: ./frontend
-    volumes:
-      - './:/app'
-      - '/app/node_modules'
-    ports:
-      - '8080:8080'
-    environment:
-      - CHOKIDAR_USEPOLLING=true
+  # frontend:
+  #   build: ./frontend
+  #   volumes:
+  #     - './:/app'
+  #     - '/app/node_modules'
+  #   ports:
+  #     - '8080:8080'
+  #   environment:
+  #     - CHOKIDAR_USEPOLLING=true
     # command: "npm run serve -- --public 0.0.0.0:8080"
   
 networks:
