--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ anyio==3.6.2
 async-asgi-testclient==1.4.11
 attrs==22.2.0
 bcrypt==4.0.1
+cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
@@ -15,6 +16,13 @@ ecdsa==0.18.0
 email-validator==1.3.1
 fastapi==0.92.0
 fastapi-jwt-auth==0.5.0
+google-api-core==2.11.0
+google-auth==2.17.3
+google-cloud-core==2.3.2
+google-cloud-storage==2.8.0
+google-crc32c==1.5.0
+google-resumable-media==2.4.1
+googleapis-common-protos==1.59.0
 greenlet==2.0.2
 gunicorn==20.1.0
 h11==0.14.0
@@ -30,7 +38,9 @@ orjson==3.8.6
 packaging==23.0
 passlib==1.7.4
 pluggy==1.0.0
+protobuf==4.22.3
 pyasn1==0.4.8
+pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==1.10.5
 PyJWT==1.7.1
