--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,10 +1,10 @@
 FROM python:3.11-alpine as base
-RUN apk add build-deps \
+RUN apk add --no-cache \
     python3-dev \
     libpq \
     gcc g++ \
-    cargo && \
-    rm -rf /var/cache/apk/*
+    cargo
+    # rm -rf /var/cache/apk/*
 
 COPY requirements.txt /app/requirements.txt
 RUN pip install -r /app/requirements.txt
