--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,10 @@
     "socket.io-client": "^4.6.1",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
-    "vue3-perfect-scrollbar": "^1.6.1"
+    "vue-select": "^4.0.0-beta.6",
+    "vue-sweetalert2": "^5.0.5",
+    "vue3-perfect-scrollbar": "^1.6.1",
+    "vuetify": "^3.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
