--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -7,6 +7,8 @@ events {
 }
 http {
   include       /etc/nginx/mime.types;
+  proxy_read_timeout 86400s;
+  proxy_send_timeout 86400s;
   default_type  application/octet-stream;
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
