--- a/k8s/mysql-config.yaml
+++ b/k8s/mysql-config.yaml
@@ -1,60 +1,14 @@
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: mysql-set
-spec:
-  selector:
-    matchLabels:
-      app: mysql
-  serviceName: "mysql"
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: mysql
-    spec:
-      terminationGracePeriodSeconds: 10
-      containers:
-      - name: mysql
-        image: mysql
-        ports:
-        - containerPort: 3306
-        volumeMounts:
-        - name: mysql-store
-          mountPath: /var/lib/mysql
-        env:
-          - name: MYSQL_ROOT_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: banderachat-secrets
-                key: DATABASE_PASSWORD
-          - name: MYSQL_DATABASE
-            valueFrom:
-              secretKeyRef:
-                name: banderachat-secrets
-                key: DATABASE
-        resources:
-          limits:
-            cpu: 512m
-            memory: 1028Mi
-          requests:
-            cpu: 256m
-            memory: 512Mi
 ---
-  # updateStrategy:
-  #   rollingUpdate:
-  #     partition: 0
-  #   type: RollingUpdate
-  volumeClaimTemplates:
-  - metadata:
-      name: mysql-store
-    spec:
-      storageClassName: fast-storageclass
-      volumeMode: Filesystem
-      accessModes: ["ReadWriteOnce"]
-      resources:
-        requests:
-          storage: 5Gi
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pv-claim
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 3Gi
 
 
 ---
@@ -71,3 +25,46 @@ spec:
   type: NodePort
   selector:
     app: mysql
+
+---
+apiVersion: apps/v1
+kind: Deployment                    # Type of the kubernetes resource
+metadata:
+  name: mysql           # Name of the deployment
+  labels:                           # Labels applied to this deployment 
+    app: mysql
+spec:
+  selector:
+    matchLabels:                    # This deployment applies to the Pods matching the specified labels
+      app: mysql
+  strategy:
+    type: Recreate
+  template:                         # Template for the Pods in this deployment
+    metadata:
+      labels:                       # Labels to be applied to the Pods in this deployment
+        app: mysql
+    spec:                           # The spec for the containers that will be run inside the Pods in this deployment
+      containers:
+      - image: mysql:latest        # The container image
+        name: mysql
+        env:
+          - name: MYSQL_ROOT_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: banderachat-secrets
+                key: DATABASE_PASSWORD
+          - name: MYSQL_DATABASE
+            valueFrom:
+              secretKeyRef:
+                name: banderachat-secrets
+                key: DATABASE
+        ports:
+        - containerPort: 3306        # The port that the container exposes       
+          name: mysql
+        volumeMounts:
+        - name: mysql-persistent-storage  # This name should match the name specified in `volumes.name`
+          mountPath: /var/lib/mysql
+      volumes:                       # A PersistentVolume is mounted as a volume to the Pod  
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: mysql-pv-claim
