--- a/k8s/fastapi-deployment.yaml
+++ b/k8s/fastapi-deployment.yaml
@@ -37,41 +37,31 @@ spec:
         ports:
         - containerPort: 8000
         env:
-          - name: DATABASE_HOST
-            value: mysql-service
-          - name: DATABASE_USERNAME
-            value: root
-          - name: DATABASE_PASSWORD
-            value: admin
-          - name: DATABASE
-            value: db
-          - name: DATABASE_SOCKET
-            value: "3306"
-        # - name: DATABASE_HOST
-        #   valueFrom:
-        #     secretKeyRef:
-        #       name: banderachat-secrets
-        #       key: DATABASE_HOST
-        # - name: DATABASE_USERNAME
-        #   valueFrom:
-        #     secretKeyRef:
-        #       name: banderachat-secrets
-        #       key: DATABASE_USERNAME
-        # - name: DATABASE_PASSWORD
-        #   valueFrom:
-        #     secretKeyRef:
-        #       name: banderachat-secrets
-        #       key: DATABASE_PASSWORD
-        # - name: DATABASE
-        #   valueFrom:
-        #     secretKeyRef:
-        #       name: banderachat-secrets
-        #       key: DATABASE
-        # - name: DATABASE_SOCKET
-        #   valueFrom:
-        #     secretKeyRef:
-        #       name: banderachat-secrets
-        #       key: DATABASE_SOCKET
+        - name: DATABASE_HOST
+          valueFrom:
+            secretKeyRef:
+              name: banderachat-secrets
+              key: DATABASE_HOST
+        - name: DATABASE_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: banderachat-secrets
+              key: DATABASE_USERNAME
+        - name: DATABASE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: banderachat-secrets
+              key: DATABASE_PASSWORD
+        - name: DATABASE
+          valueFrom:
+            secretKeyRef:
+              name: banderachat-secrets
+              key: DATABASE
+        - name: DATABASE_SOCKET
+          valueFrom:
+            secretKeyRef:
+              name: banderachat-secrets
+              key: DATABASE_SOCKET
         volumeMounts:
           - name: images-volume
             mountPath: /app/media
