--- a/.env.prod.db_example
+++ b/.env.prod.db_example
@@ -1,5 +1,4 @@
 APP_SECRET_STRING=
-
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE=
@@ -7,6 +6,5 @@ DATABASE_TEST=
 DATABASE_HOST=
 DATABASE_SOCKET=
 
-SECRET_KEY=
-JWT_PRIVATE_KEY=
-JWT_PUBLIC_KEY=
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=
