--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,17 +2,17 @@ version: '3.8'
 
 services:
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    ports:
-      - "5002:5002"  # Expose Nginx on port 5001
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf  # Map the custom Nginx config
-    depends_on:
-      - backend
-    networks:
-      - fastapinetwork
+  # nginx:
+  #   image: nginx:latest
+  #   container_name: nginx
+  #   ports:
+  #     - "5002:5002"  # Expose Nginx on port 5002
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf  # Map the custom Nginx config
+  #   depends_on:
+  #     - backend
+  #   networks:
+  #     - fastapinetwork
 
   backend:
     build: 
