--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -29,5 +29,12 @@ http {
     location = /50x.html {
       root   /usr/share/nginx/html;
     }
+    location /api/ {
+        proxy_pass http://backend:5000;  # Forward requests to FastAPI backend
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
   }
 }
