--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -15,6 +15,11 @@ http {
                     '"$http_user_agent" "$http_x_forwarded_for"';
   access_log  /var/log/nginx/access.log  main;
 
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+    }
+
   server {
     # good practice not to use port 80 inside a container
     # because container should run as non root and they can't run under port < 1024 
@@ -31,10 +36,13 @@ http {
     }
     location /api/ {
         proxy_pass http://backend:5000;  # Forward requests to FastAPI backend
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
     }
   }
 }
